# ticket-triage-agent

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml  secret-scan.yml
docs/: architecture.md  interview-notes.md  linting-testing-standards.md  production-readiness.md  runbook.md  security-notes.md
docs/adr/: 0001-core-design.md  0001-main-design-choice.md
src/: __init__.py  app.py  config.py  exceptions.py  llm.py  middleware.py  router.py  service.py
tests/: conftest.py  test_api.py  test_basic.py  test_config.py  test_llm.py  test_router.py  test_service.py
