[project]
name = "ticket-triage-agent"
version = "0.1.0"
description = "Example AI agent service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "httpx", "scikit-learn",
    "jinja2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "coverage",
    "mypy",
    "ruff",
    "black",
    "isort",
    "types-requests",
    "requests-mock",
]

[tool.ruff]
line-length = 100
select = ["E","F","B","I","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
